# bundle_adjustment_solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test_ba.cpp  test_warp_simd.cpp
core/: bundle_adjustment_solver.cpp  bundle_adjustment_solver.h  full_bundle_adjustment_solver.cpp  full_bundle_adjustment_solver.h  full_bundle_adjustment_solver_ceres.cpp  full_bundle_adjustment_solver_ceres.h  full_bundle_adjustment_solver_refactor.cpp  full_bundle_adjustment_solver_refactor.h  pose_only_bundle_adjustment_solver.cpp  pose_only_bundle_adjustment_solver.h  pose_only_bundle_adjustment_solver_ceres.cpp  pose_only_bundle_adjustment_solver_ceres.h  pose_optimizer.cpp  pose_optimizer.h  simd_library.cpp  simd_library.h  solver_option_and_summary.cpp  solver_option_and_summary.h  solver_option_and_summary_refactor.cpp  solver_option_and_summary_refactor.h  timer.h  type_defines.cpp  type_defines.h
programming_pattern/: CMakeLists.txt  full_bundle_adjustment_solver.h  full_bundle_adjustment_solver_analytic.cpp  full_bundle_adjustment_solver_analytic.h  main_factory_pattern.cpp  options_and_summary.h  types.h
test/: test_3dof_mono_poseonly_ba.cpp  test_3dof_stereo_poseonly_ba.cpp  test_6dof_mono_poseonly_ba.cpp  test_6dof_stereo_poseonly_ba.cpp  test_ba.cpp  test_ba_refactor.cpp  test_compare_ceres_vs_native.cpp  test_projection_of_3d_point.cc  test_warp_simd.cpp
utility/: geometry_library.cpp  geometry_library.h  simd_library.cpp  timer.cpp  timer.h
